--- a/src/about/about.html
+++ b/src/about/about.html
@@ -1,5 +1,5 @@
 <div class="about">
-  <h1>{{ AboutCtrl.title }}</h1>
+  <h1>{{ aboutCtrl.title }}</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quis asperiores sapiente quisquam pariatur, quam dignissimos neque nemo unde nesciunt illo. Rem maxime, inventore asperiores quia quos nulla. Rerum, cum.</p>
   <p>Ad eaque, cumque fugiat dolore delectus deserunt officia praesentium sed totam ullam rem explicabo error culpa nihil. Sequi aliquid aperiam totam architecto quae est reiciendis sapiente suscipit consequatur, excepturi id.</p>
   <p>A perspiciatis fugit quibusdam distinctio facere, harum quae quasi rem sed dolorum nostrum inventore, deserunt doloremque vel et libero unde. Excepturi praesentium debitis repellat nemo, dolore dolorem quisquam autem vero!</p>
