--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -13,14 +13,15 @@
       name='text'
       ng-model='$ctrl.text'
       required
-      ng-class='$ctrl.textClasses'
-      ng-trim=true
-      ng-change='$ctrl.updateTextCount()'
+      minlength='10'
+      maxlength='300'
+      ng-model-options="{ allowInvalid: true }"
+      ng-trim=false
     ></textarea>
   </label>
   <div ng-class='$ctrl.textClasses' class='text-tip text-info'>
     <span>10 to 300 charactors</span>
-    <span>{{ $ctrl.availableTextCount }}</span>
+    <span ng-bind='$ctrl.maxTextCount - $ctrl.text.length' />
   </div>
   <button class='btn-primary' type='submit'>Send</button>
 </form>
